optimized the site

--- a/css/style.css
+++ b/css/style.css
@@ -1,337 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-body{
-  margin: 0 3rem;
-  padding: 0 5px;
-  background: url('/images/sincerely-media-FPrniQ84dEk-unsplash.jpg') no-repeat center;
-  background-size: cover;
-}
-.nes-container {
-  margin: 2rem 0;
-  margin-top: 130px;
-}
-
-/* Start Nav Section*/
-#top-section{
-  border-bottom: 5px lightsteelblue solid;
-  margin-bottom: 2rem;
-  height: 7rem;
-  transition: all .8s;
-}
-.fixed-top {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-    margin-bottom: 300px;
-}
-.custom-navbar{
-  background: linear-gradient(rgba(0, 0, 0, 0.404), rgba(31, 100, 112, 0.4));
-  padding: 10px 30px;
-  transition: all .8s;
-}
-.github {
-  animation-name: anim;
-  animation-duration: 2s;
-}
-.linkedin {
-  animation-name: anim;
-  animation-duration: 1.5s;
-}
-.gmail {
-  animation-name: anim;
-  animation-duration: 1s;
-}
-.scorpion-image {
-  padding: 0 10px;
-  width: 3.5rem;
-  height: 3.5rem;
-  margin: 0;
-}
-.nav-brand {
-  padding-top: 2.5rem;
-}
-.nes-badge{
-  width: 18rem;
-  margin: 0;
-  padding: 0;
-}
-.top-right-section {
-  float: right;
-  padding-right: 4rem;
-}
-@keyframes anim {
-  0% {
-    transform: translateX(-800px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-/* End of Navigation */
-
-/* Start Speech Balloons and Balloon Messages */
-.nes-balloon{
-  background: transparent;
-  margin: 0;
-}
-.balloon {
-  margin-bottom: 2rem;
-}
-.speech-icon{
-  margin-right: 2rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.speech-icon-bottom {
-  margin-left: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 1rem;
-}
-/* Creating the Fade-in animations with the TOP-side speech balloon and balloon messages */
-.fromLeft{
-  animation-name: fromLeft;
-  animation-duration: 3s;
-}
-.fromRight{
-  animation-name: fromRight;
-  animation-duration: 3s;
-}
-@keyframes fromLeft {
-  0% {
-    transform: translateX(-20px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-@keyframes fromRight {
-  0% {
-    transform: translateX(120px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-/* End of Creating the Fade-in animations of the TOP-side speech balloon and balloon messages */
-
-/* Start of creating the Fade-in animations of the bottom-level speech balloon and balloon messages */
-.fromLeft2{
-  animation-name: fromLeft2;
-  animation-duration: 3s;
-}
-.fromRight2{
-  animation-name: fromRight2;
-  animation-duration: 3s;
-}
-@keyframes fromLeft2 {
-  0% {
-    transform: translateX(-90px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-@keyframes fromRight2 {
-  0% {
-    transform: translateX(20px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-/*End of creating the Fade-in animations of the bottom-level speech balloon and balloon messages */
-/* End of Start Speech Balloons and Balloon Messages*/
-
-/* Start of Exprience Section */
-.nes-progress{
-  height: 14px;
-  margin-left: 2.5rem;
-}
-#address{
-  margin-bottom: 2.5rem;
-}
-/* End of Experience Section */
-
-/* Contact-Me Section */
-#contact-me{
-  display: none;
-}
-/* End of Contact-Me Section */
-
-/* Before the Footer/ Scroll-to-top Section */
-.nes-btn{
-  font-size: 20px;
-  margin: 10px;
-}
-.remove-nes-btn{
-  display: none;
-}
-.scroll-top{
-  position: fixed;
-  bottom: 10px;
-  left: 5px;
-  z-index: 99;
-}
-/* End of Scroll-to-top section */
-
-/* Start of Responsiveness */
-@media(max-width: 1026px){
-  .balloon-top{
-    width: 550px;
-  }
-  .balloon-message p{
-   font-size: 15px;
-  }
-  .balloon-bottom{
-    width: 550px;
-  }
-  .balloon-message-2 p{
-    font-size: 15px;
-  }
-}
-@media(max-width: 760px){
-  .nes-badge{
-    width: 22rem;
-    margin: 0;
-    padding: 0;
-  }
-  .top-right-section {
-    margin-left: auto;
-    padding-right: 0px;
-  }
-  .balloon-top{
-    width: 400px;
-  }
-  .balloon-message p{
-   font-size: 12px;
-  }
-  .balloon-bottom{
-    width: 400px;
-  }
-  .balloon-message-2 p{
-    font-size: 12px;
-  }
-}
-@media(max-width: 650px) {
-  #contact-me{
-    display: block;
-  }
-  .top-right-section {
-    display: none;
-  }
-  .nes-badge{
-    width: 18rem;
-    margin: 0;
-    padding: 0 5px;
-  }
-  .scorpion-image {
-    display: none;
-  }
-  .balloon-top{
-    width: 350px;
-  }
-  .balloon-message p{
-   font-size: 12px;
-  }
-  .balloon-bottom{
-    width: 350px;
-  }
-  .balloon-message-2 p{
-    font-size: 12px;
-  }
-}
-@media(max-width: 590px){
-  .nes-progress{
-    margin-left: 0;
-  }
-  .balloon-top{
-    width: 250px;
-  }
-  .balloon-bottom{
-    width: 250px;
-  }
-  #ending-footer span {
-    font-size: 10px;
-  }
-}
-@media(max-width: 570px){
-  .speech-icon{
-    margin-right: 2rem;
-    margin-top: 4rem;
-    margin-bottom: 0;
-  }
-  .speech-icon-bottom {
-    margin-left: 2rem;
-    margin-bottom: 0;
-    margin-top: 4rem;
-  }
-  .balloon-top{
-    width: 250px;
-  }
-  .balloon-message p{
-   font-size: 10px;
-  }
-  .balloon-bottom{
-    width: 250px;
-  }
-  .balloon-message-2 p{
-    font-size: 10px;
-  }
-}
-@media(max-width: 500px) {
-  .nes-container .nes-text {
-    font-size: 15px;
-  }
-  .nes-container p {
-    font-size: 10px;
-  }
-  blockquote {
-    font-size: 10px;
-  }
-  .nes-balloon p {
-    font-size: 10px;
-  }
-  .nes-list li {
-    font-size: 10px;
-  }
-  .nes-progress {
-   display: none;
-  }
-  .speech-icon{
-    margin-right: 2rem;
-    margin-top: 8rem;
-    margin-bottom: 0;
-  }
-  .speech-icon-bottom {
-    margin-left: 2rem;
-    margin-bottom: 0;
-    margin-top: 8rem;
-  }
-  .balloon-top{
-    width: 180px;
-  }
-  .balloon-message p{
-   font-size: 10px;
-  }
-  .balloon-bottom{
-    width: 180px;
-  }
-  .balloon-message-2 p{
-    font-size: 10px;
-  }
-}
-/* End of Responsiveness */
+*{margin:0;padding:0}body{margin:0 1rem;padding:0 5px}.nes-container{margin:2rem 0;margin-top:130px}#top-section{border-bottom:5px #b0c4de solid;margin-bottom:2rem;height:7rem;transition:all .8s}.fixed-top{position:fixed;top:0;right:0;left:0;z-index:1030;margin-bottom:300px}.custom-navbar{background:linear-gradient(rgba(0,0,0,.404),rgba(31,100,112,.4));padding:10px 30px;transition:all .8s}.github{animation-name:anim;animation-duration:2s}.linkedin{animation-name:anim;animation-duration:1.5s}.gmail{animation-name:anim;animation-duration:1s}.scorpion-image{padding:0 10px;width:3.5rem;height:3.5rem;margin:0}.nav-brand{padding-top:2.5rem}.nes-badge{width:18rem;margin:0;padding:0}.top-right-section{float:right;padding-right:4rem}@keyframes anim{0%{transform:translateX(-800px);opacity:0}100%{transform:translateX(0);opacity:1}}.nes-balloon{background:0 0;margin:0}.balloon{margin-bottom:2rem}.speech-icon{margin-right:2rem;margin-top:2rem;margin-bottom:2rem}.speech-icon-bottom{margin-left:2rem;margin-bottom:2rem;margin-top:1rem}.fromLeft{animation-name:fromLeft;animation-duration:3s}.fromRight{animation-name:fromRight;animation-duration:3s}@keyframes fromLeft{0%{transform:translateX(-20px);opacity:0}100%{transform:translateX(0);opacity:1}}@keyframes fromRight{0%{transform:translateX(120px);opacity:0}100%{transform:translateX(0);opacity:1}}.fromLeft2{animation-name:fromLeft2;animation-duration:3s}.fromRight2{animation-name:fromRight2;animation-duration:3s}@keyframes fromLeft2{0%{transform:translateX(-90px);opacity:0}100%{transform:translateX(0);opacity:1}}@keyframes fromRight2{0%{transform:translateX(20px);opacity:0}100%{transform:translateX(0);opacity:1}}.nes-progress{height:14px;margin-left:1.5rem}#address{margin-bottom:2.5rem}#contact-me{display:none}.nes-btn{font-size:20px;margin:10px}.remove-nes-btn{display:none}.scroll-top{position:fixed;bottom:10px;left:5px;z-index:99}#heart{font-size:50px;color:#b22222}@media(max-width:1026px){.balloon-top{width:550px}.balloon-message p{font-size:15px}.balloon-bottom{width:550px}.balloon-message-2 p{font-size:15px}}@media(max-width:760px){.nes-badge{width:22rem;margin:0;padding:0}.top-right-section{margin-left:auto;padding-right:0}.balloon-top{width:400px}.balloon-message p{font-size:12px}.balloon-bottom{width:400px}.balloon-message-2 p{font-size:12px}}@media(max-width:650px){#contact-me{display:block}.top-right-section{display:none}.nes-badge{width:18rem;margin:0;padding:0 5px}.scorpion-image{display:none}.balloon-top{width:350px}.balloon-message p{font-size:12px}.balloon-bottom{width:350px}.balloon-message-2 p{font-size:12px}}@media(max-width:590px){.nes-progress{margin-left:0}.balloon-top{width:250px}.balloon-bottom{width:250px}#ending-footer span{font-size:10px}}@media(max-width:570px){.speech-icon{margin-right:2rem;margin-top:4rem;margin-bottom:0}.speech-icon-bottom{margin-left:2rem;margin-bottom:0;margin-top:4rem}.balloon-top{width:250px}.balloon-message p{font-size:10px}.balloon-bottom{width:250px}.balloon-message-2 p{font-size:10px}}@media(max-width:500px){.nes-container .nes-text{font-size:15px}.nes-container p{font-size:10px}blockquote{font-size:10px}.nes-balloon p{font-size:10px}.nes-list li{font-size:10px}.nes-progress{display:none}.speech-icon{margin-right:2rem;margin-top:8rem;margin-bottom:0}.speech-icon-bottom{margin-left:2rem;margin-bottom:0;margin-top:8rem}.balloon-top{width:180px}.balloon-message p{font-size:10px}.balloon-bottom{width:180px}.balloon-message-2 p{font-size:10px}}
